--- a/scss/layout/_carrito.scss
+++ b/scss/layout/_carrito.scss
@@ -3,13 +3,15 @@
 @import "./utilidades/extend";
 
 .carrito {
-    width: 100%;
+    width: 95%;
     max-width: 100%;
     border-collapse: collapse;
     background: white;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    overflow: hidden; // Evita el desbordamiento lateral
+    overflow: hidden;
+    margin: 7vh 2vw 0 2vw;
+
 }
 
 .carrito-head {
@@ -22,7 +24,6 @@
     text-align: left;
     border-bottom: 1px solid #ddd;
     max-width: 100%;  
-    word-break: break-word; 
 }
 
 .compra {
@@ -46,6 +47,7 @@
 @media (max-width: 768px) {
     .carrito {
         margin-top: 2vh;
+        border-radius: 7px;
     }
 
     .total {
@@ -54,10 +56,11 @@
     }
 
     .compra {
-        width: 55vw;
+        width: 60vw;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
     }
 
     .monto, .texto-button {
